Replace Paths.get with Path.of in SEP-only code
See trinodb/trino@6b21422e15d8a35611eb6a43846e251adbedbd7d